--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@
   .dark {
     /* --background: 222.2 84% 4.9%; */
     --background: 20 14% 4%;
-    --foreground: 210 40% 98%;
+    --foreground: 210 0% 85%;
     /* --card: 222.2 84% 4.9%; */
     --card: 20 14% 4%;
     --card-foreground: 210 40% 98%;
@@ -88,4 +88,8 @@ h4 {
 
 .price {
   @apply scroll-m-20;
+}
+
+p {
+  color: hsl(var(--foreground));
 }
