Change accent color

--- a/src/index.css
+++ b/src/index.css
@@ -46,8 +46,8 @@
     --secondary-foreground: 210 40% 98%;
     --muted: 217.2 32.6% 17.5%;
     --muted-foreground: 215 20.2% 65.1%;
-    --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
+    --accent: 23 58% 28%;
+    --accent-foreground: 23 31% 12%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
     --border: 217.2 32.6% 17.5%;
@@ -92,4 +92,8 @@ h4 {
 
 p {
   color: hsl(var(--foreground));
+}
+
+button {
+  background-color: hsl(var(--foreground));
 }
